[swagger] Another gen of API models
