# swagger_server/controllers/source_controller.py
@@ -1,8 +1,8 @@
 import connexion
 import six
 
+from swagger_server.models.query import Query  # noqa: E501
 from swagger_server.models.source import Source  # noqa: E501
-from swagger_server.models.source_query import SourceQuery  # noqa: E501
 from swagger_server import util
 
 
@@ -32,5 +32,5 @@ def search_for_sources(body):  # noqa: E501
     :rtype: List[Source]
     """
     if connexion.request.is_json:
-        body = SourceQuery.from_dict(connexion.request.get_json())  # noqa: E501
+        body = Query.from_dict(connexion.request.get_json())  # noqa: E501
     return 'do some magic!'
