# swagger_server/models/__init__.py
@@ -13,12 +13,9 @@ from swagger_server.models.hr_zone_above import HRZoneAbove
 from swagger_server.models.hr_zone_range import HRZoneRange
 from swagger_server.models.query import Query
 from swagger_server.models.source import Source
-from swagger_server.models.source_query import SourceQuery
 from swagger_server.models.source_query_params import SourceQueryParams
 from swagger_server.models.source_type import SourceType
 from swagger_server.models.tag import Tag
-from swagger_server.models.tag_type import TagType
 from swagger_server.models.workout import Workout
-from swagger_server.models.workout_query import WorkoutQuery
 from swagger_server.models.workout_query_params import WorkoutQueryParams
 from swagger_server.models.zone_type import ZoneType
